<resources>
    <string name="app_name">PPC</string>
    <string name="title_activity_lista_tipo_apont">LISTA TIPO</string>
    <string name="texto_retornar">RETORNAR</string>
    <string name="title_activity_lista_menu">MENU</string>
    <string name="title_activity_auditor1">AUDITOR 1</string>
    <string name="texto_auditor1">N. AUDITOR 1:</string>
    <string name="texto_auditor2">N. AUDITOR 2:</string>
    <string name="texto_auditor3">N. AUDITOR 3:</string>
    <string name="texto_num1">1</string>
    <string name="texto_num2">2</string>
    <string name="texto_num3">3</string>
    <string name="texto_num4">4</string>
    <string name="texto_num5">5</string>
    <string name="texto_num6">6</string>
    <string name="texto_num7">7</string>
    <string name="texto_num8">8</string>
    <string name="texto_num9">9</string>
    <string name="texto_num0">0</string>
    <string name="texto_num00">00</string>
    <string name="texto_virg">,</string>
    <string name="texto_padrao_ok">OK</string>
    <string name="texto_padrao_canc">APG</string>
    <string name="title_activity_auditor2">AUDITOR 2</string>
    <string name="title_activity_auditor3">AUDITOR 3</string>
    <string name="title_activity_data">DATA</string>
    <string name="texto_data">DATA:</string>
    <string name="title_activity_turno">TURNO</string>
    <string name="texto_lista_turno">TURNO</string>
    <string name="title_activity_secao">SEÇÃO</string>
    <string name="texto_secao">NUM. SEÇÃO:</string>
    <string name="title_activity_talhao">TALHÃO</string>
    <string name="texto_talhao">NUM. TALHÃO:</string>
    <string name="title_activity_os">OS</string>
    <string name="title_activity_frente">FRENTE</string>
    <string name="title_activity_colhedora">COLHEDORA</string>
    <string name="texto_colhedora">N. COLHEDORA:</string>
    <string name="texto_frente">NUM. FRENTE:</string>
    <string name="texto_os">NUM. OS:</string>
    <string name="title_activity_operador">OPERADOR</string>
    <string name="texto_operador">N. OPERADOR:</string>
    <string name="title_activity_msg_cabecalho">MSG CABEÇALHO</string>
    <string name="texto_msg_cabecalho">CABEÇALHO</string>
    <string name="texto_padrao_salvar">SALVAR</string>
    <string name="texto_padrao_cancelar">CANCELAR</string>
    <string name="texto_padrao_retornar">RETORNAR</string>
    <string name="title_activity_tara">TARA</string>
    <string name="texto_tara">TARA (KG):</string>
    <string name="title_activity_tolete">TOLETE</string>
    <string name="title_activity_cana_inteira">CANA INTEIRA</string>
    <string name="texto_tolete">TOLETE (KG):</string>
    <string name="texto_cana_inteira">CANA INTEIRA (KG):</string>
    <string name="title_activity_toco">TOCO</string>
    <string name="texto_toco">TOCO (KG):</string>
    <string name="title_activity_pedaco">PEDAÇO</string>
    <string name="texto_pedaco">PEDAÇO (KG):</string>
    <string name="title_activity_repique">REPIQUE</string>
    <string name="texto_repique">REPIQUE (KG):</string>
    <string name="title_activity_ponteiro">PONTEIRO</string>
    <string name="texto_ponteiro">PONTEIRO (KG):</string>
    <string name="title_activity_lascas">LASCAS</string>
    <string name="texto_lascas">LASCAS (KG):</string>
    <string name="title_activity_soqueira_kg">SOQUEIRA KQ</string>
    <string name="texto_soqueira_kg">SOQUEIRA (KG):</string>
    <string name="title_activity_soqueira_num">SOQUEIRA NUM</string>
    <string name="texto_soqueira_num">SOQUEIRA (NUM):</string>
    <string name="title_activity_msg_observacao">MSG OBSERVAÇÃO</string>
    <string name="texto_msg_observ">OBSERVAÇÕES</string>
    <string name="texto_titulo_lista_cabecalho">CABEÇALHO(S)</string>
    <string name="texto_titulo_cabecalho">CABEÇALHO</string>
    <string name="texto_titulo_lista_amostra">AMOSTRA(S)</string>
    <string name="texto_padrao_inserir">INSERIR</string>
    <string name="texto_padrao_inserir_amostra">INSERIR AMOSTRA</string>
    <string name="texto_padrao_voltar">VOLTAR</string>
    <string name="texto_inf_cabecalho">TESTE</string>
    <string name="title_activity_configuracoes">CONFIGURAÇÕES</string>
    <string name="texto_padrao_sim">SIM</string>
    <string name="texto_padrao_nao">NÃO</string>
    <string name="title_activity_envio_dados">ENVIO DE DADOS</string>
    <string name="texto_envio_dados">ENVIANDO DADOS</string>
    <string name="texto_atualizar_dados">ATUALIZAR DADOS</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="texto_botao_camera">ACIONAR CAMERA</string>
    <string name="title_activity_lista_observacao">ListaObservacaoActivity</string>
    <string name="title_activity_msg_fechar_analise">MsgFecharAnaliseActivity</string>
    <string name="texto_lista_menu">TIPO DE COLHEITA</string>
    <string name="texto_lista_tipo_apont">TIPO</string>
    <string name="texto_menu_principal">PRINCIPAL - V 1.01</string>
    <string name="texto_item_list">TESTE</string>
    <string name="texto_padrao_fechar">FECHAR</string>
    <string name="texto_padrao_excluir">EXCLUIR</string>
    <string name="texto_nro_aparelho_config">NRO APARELHO:</string>
</resources>
